--- a/scalarm/values.yaml
+++ b/scalarm/values.yaml
@@ -8,7 +8,7 @@ image:
   pullPolicy: IfNotPresent
 service:
   name: scalarm-svc
-  type: NodePort
+  type: ClusterIP
   externalPort: 3000	
   internalPort: 3000
 env:
@@ -27,7 +27,12 @@ env:
   mongodb_name: mongodb
 resources:
 
+mongodb:
+  persistence:
+    enabled: false
 
 redis:
   usePassword: false
+  persistence: 
+    enabled: false
   
