--- a/scalarm/templates/deployment.yaml
+++ b/scalarm/templates/deployment.yaml
@@ -44,7 +44,13 @@ spec:
           - "sh"
           - "-c"
           - >
-           /bin/bash -c 'source /usr/local/rvm/scripts/rvm && rake service:start && tail -f log/${RAILS_ENV}.log'
+           /bin/bash -c 'source /usr/local/rvm/scripts/rvm && rake service:start && tail -f log/${RAILS_ENV}.log' ;
+        readinessProbe:
+          tcpSocket:
+            port: {{ .Values.service.internalPort }}
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 10
         ports:
         - containerPort: {{ .Values.service.internalPort }}
         resources:
