--- a/scalarm/values.yaml
+++ b/scalarm/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: scalarm/experiment-manager
-  tag: 1.0.2
+  repository: scalarm/scalarm_experiment_manager
+  tag: latest
   pullPolicy: IfNotPresent
 service:
   name: scalarm-svc
